--- a/website/index.html
+++ b/website/index.html
@@ -5,8 +5,10 @@
 <title>Weather Journal</title>
 <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
+<!-- Clock code https://codepen.io/afarrar/pen/JRaEjP -->
 </head>
  <body>
+  <div id="MyClockDisplay" class="clock" onload="showTime()"></div>
 <div id = "app">
   <div class ="holder headline">
     Weather Journal App
@@ -22,10 +24,11 @@
   </div>
   <div class ="holder entry">
     <div class = "title">Most Recent Entry</div>
-   <div id = "entryHolder">
+    <div id = "entryHolder">
+    <div id = "location"></div>
     <div id = "date"></div>
-   <div id = "temp"></div>
-   <div id = "content"></div>
+    <div id = "temp"></div>
+    <div id = "content"></div>
   </div>
   </div>
   </div>
